--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "raw-loader": "^0.5.1",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-svg": "^2.1.21",
     "sass-loader": "^4.1.1"
   },
   "devDependencies": {
