--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "babel-plugin-wrap-in-js": "^1.1.0",
     "glob": "7.1.1",
     "next": "^2.0.0-beta.18",
+    "next-connect-redux": "^0.1.5",
+    "next-redux-wrapper": "^1.3.2",
     "node-sass": "^4.4.0",
     "normalize.css": "5.0.0",
     "postcss-easy-import": "2.0.0",
@@ -22,7 +24,11 @@
     "raw-loader": "^0.5.1",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-redux": "^5.0.6",
     "react-svg": "^2.1.21",
+    "redux": "^3.7.2",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.2.0",
     "sass-loader": "^4.1.1"
   },
   "devDependencies": {
