--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "raw-loader": "^0.5.1",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-localize-redux": "^2.5.2",
     "react-redux": "^5.0.6",
     "react-svg": "^2.1.21",
+    "react-youtube": "^7.4.0",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
