--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^15.4.2",
     "react-localize-redux": "^2.5.2",
     "react-redux": "^5.0.6",
+    "react-slick": "^0.14.11",
     "react-svg": "^2.1.21",
     "react-youtube": "^7.4.0",
     "redux": "^3.7.2",
