--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "autoprefixer": "6.7.6",
     "babel-plugin-module-resolver": "2.5.0",
     "babel-plugin-wrap-in-js": "^1.1.0",
+    "countup.js": "^1.8.5",
     "glob": "7.1.1",
     "next": "^2.0.0-beta.18",
     "next-connect-redux": "^0.1.5",
