--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "autoprefixer": "6.7.6",
     "babel-plugin-module-resolver": "2.5.0",
     "babel-plugin-wrap-in-js": "^1.1.0",
+    "classnames": "^2.2.5",
     "countup.js": "^1.8.5",
     "glob": "7.1.1",
     "next": "^2.0.0-beta.18",
@@ -26,6 +27,7 @@
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-localize-redux": "^2.5.2",
+    "react-motion": "^0.5.0",
     "react-redux": "^5.0.6",
     "react-scroll": "^1.5.4",
     "react-slick": "^0.14.11",
