--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-scroll": "^1.5.4",
     "react-slick": "^0.14.11",
     "react-svg": "^2.1.21",
+    "react-typist": "^1.1.1",
     "react-youtube": "^7.4.0",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
