--- a/package.json
+++ b/package.json
@@ -4,19 +4,20 @@
   "description": "",
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && next export",
     "start": "next start"
   },
   "author": "Davide Bertola <dade@dadeb.it>",
   "license": "ISC",
   "dependencies": {
     "autoprefixer": "6.7.6",
+    "babel-plugin-inline-react-svg": "^0.4.0",
     "babel-plugin-module-resolver": "2.5.0",
     "babel-plugin-wrap-in-js": "^1.1.0",
     "classnames": "^2.2.5",
     "countup.js": "^1.8.5",
     "glob": "7.1.1",
-    "next": "^2.0.0-beta.18",
+    "next": "^3.0.6",
     "next-connect-redux": "^0.1.5",
     "next-redux-wrapper": "^1.3.2",
     "node-sass": "^4.4.0",
@@ -31,7 +32,6 @@
     "react-redux": "^5.0.6",
     "react-scroll": "^1.5.4",
     "react-slick": "^0.14.11",
-    "react-svg": "^2.1.21",
     "react-typist": "^1.1.1",
     "react-youtube": "^7.4.0",
     "redux": "^3.7.2",
