--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "postcss-loader": "1.3.3",
     "raw-loader": "^0.5.1",
     "react": "^15.4.2",
+    "react-document-meta": "^2.1.2",
     "react-dom": "^15.4.2",
     "react-localize-redux": "^2.5.2",
     "react-motion": "^0.5.0",
