--- a/package.json
+++ b/package.json
@@ -26,8 +26,9 @@
     "postcss-loader": "1.3.3",
     "raw-loader": "^0.5.1",
     "react": "^15.4.2",
-    "react-document-meta": "^2.1.2",
     "react-dom": "^15.4.2",
+    "react-facebook": "^4.0.14",
+    "react-google-analytics": "^0.2.0",
     "react-localize-redux": "^2.5.2",
     "react-motion": "^0.5.0",
     "react-redux": "^5.0.6",
