--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-localize-redux": "^2.5.2",
     "react-motion": "^0.5.0",
     "react-redux": "^5.0.6",
+    "react-responsive-image": "^3.4.2",
     "react-scroll": "^1.5.4",
     "react-slick": "^0.14.11",
     "react-typist": "^1.1.1",
