--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build && next export",
-    "start": "next start"
+    "start": "node server.js"
   },
   "author": "Davide Bertola <dade@dadeb.it>",
   "license": "ISC",
@@ -15,7 +15,9 @@
     "babel-plugin-module-resolver": "2.5.0",
     "babel-plugin-wrap-in-js": "^1.1.0",
     "classnames": "^2.2.5",
+    "cors": "^2.8.4",
     "countup.js": "^1.8.5",
+    "express": "^4.15.4",
     "glob": "7.1.1",
     "next": "^3.0.6",
     "next-connect-redux": "^0.1.5",
